<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.perdian.apps.podcastcentral</groupId>
    <artifactId>podcastcentral-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <name>PodcastCentral</name>
    <description>Podcast Management</description>
    <url>https://github.com/perdian/podcastcentral</url>

    <scm>
        <url>https://github.com/perdian/podcastcentral</url>
        <connection>scm:git:https://github.com/perdian/podcastcentral.git</connection>
        <developerConnection>scm:git:https://github.com/perdian/podcastcentral.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <id>perdian</id>
            <name>Christian Seifert</name>
            <email>dev@perdian.de</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <commons-io.version>2.11.0</commons-io.version>
        <controlsfx.version>11.1.0</controlsfx.version>
        <dom4j.version>2.1.4</dom4j.version>
        <fontawesomefx.version>4.7.0-9.1.2</fontawesomefx.version>
        <h2.version>2.1.214</h2.version>
        <hibernate.version>5.6.15.Final</hibernate.version>
        <java.version>20</java.version>
        <javafx.version>20</javafx.version>
        <javax.persistence.version>2.2</javax.persistence.version>
        <jaxen.version>1.2.0</jaxen.version>
        <junit.jupiter.version>5.9.3</junit.jupiter.version>
        <jsoup.version>1.16.1</jsoup.version>
        <logback.version>1.4.7</logback.version>
        <mockito.version>5.3.1</mockito.version>
        <okhttp.version>4.11.0</okhttp.version>
        <slf4j.version>2.0.7</slf4j.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${controlsfx.version}</version>
        </dependency>
        <dependency>
            <groupId>de.jensd</groupId>
            <artifactId>fontawesomefx-fontawesome</artifactId>
            <version>${fontawesomefx.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp.version}</version>
        </dependency>
        <dependency>
            <groupId>org.dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>${dom4j.version}</version>
        </dependency>
        <dependency>
            <groupId>jaxen</groupId>
            <artifactId>jaxen</artifactId>
            <version>${jaxen.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.persistence</groupId>
            <artifactId>javax.persistence-api</artifactId>
            <version>${javax.persistence.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${hibernate.version}</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.perdian.apps.podcastcentral.ui.CentralApplicationLauncher</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>generic-bundle</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <version>3.4.1</version>
                        <configuration>
                            <finalName>podcastcentral</finalName>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>shade</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>macos-bundle</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>de.perdian.maven.plugins</groupId>
                        <artifactId>macosappbundler-maven-plugin</artifactId>
                        <version>1.18.1</version>
                        <configuration>
                            <plist>
                                <CFBundleName>PodcastCentral</CFBundleName>
                                <CFBundleDisplayName>PodcastCentral</CFBundleDisplayName>
                                <CFBundleIconFile>src/bundle/macos/resources/podcastcentral.icns</CFBundleIconFile>
                                <JVMMainClassName>de.perdian.apps.podcastcentral.ui.CentralApplicationLauncher</JVMMainClassName>
                                <JVMVersion>${java.version}+</JVMVersion>
                                <JVMOptions>
                                    <string>-Dapple.laf.useScreenMenuBar=true</string>
                                    <string>-Xdock:name=${project.name}</string>
                                </JVMOptions>
                            </plist>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>bundle</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
